*  README.md  *  package.json  *  server.js  *  .gitignore 	deleted:    src/Counter.js 	new file:   src/about.js 	new file:   src/app.js 	new file:   src/contact.js 	new file:   src/how-to.js 	new file:   src/logo.js 	modified:   src/main.js 	new file:   src/portfolio.js 	new file:   www/css/lightbox.css 	new file:   www/css/style.css 	new file:   www/img/Picture 1.png 	new file:   www/img/apply-paste.jpg 	new file:   www/img/business-cardstock-light.png 	new file:   www/img/business-cardstock.png 	new file:   www/img/close.png 	new file:   www/img/cones.jpg 	new file:   www/img/henna_powder.png 	new file:   www/img/icnha-logo.png 	new file:   www/img/img1.png 	new file:   www/img/img1_p.png 	new file:   www/img/img2.png 	new file:   www/img/img2_p.png 	new file:   www/img/img3.png 	new file:   www/img/img3_p.png 	new file:   www/img/img4.png 	new file:   www/img/img4_p.png 	new file:   www/img/img6.png 	new file:   www/img/img6_p.png 	new file:   www/img/img7.png 	new file:   www/img/img7_p.png 	new file:   www/img/img8.jpg 	new file:   www/img/img8_p.jpg 	new file:   www/img/lemon.png 	new file:   www/img/loading.gif 	new file:   www/img/mixed-paste.jpg 	new file:   www/img/next.png 	new file:   www/img/piloncillo.png 	new file:   www/img/powder.png 	new file:   www/img/prev.png 	new file:   www/img/signature_1.png 	new file:   www/img/timetemp.jpg 	modified:   www/index.html 	new file:   www/js/jquery-1.11.0.min.js 	new file:   www/js/lightbox.js

--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,24 @@
 <html>
 <head>
+	<meta name="keywords" content="henna, henna art, henna tattoos, mehndi, designs, portfolio">
+	<meta name="description" content="hennasea">
+	<meta name="author" content="Sea Bridson">
+	<meta charset="UTF-8">
+
+	<title>Hennasea</title>
+
+	<link href="/css/lightbox.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Dawning+of+a+New+Day|Itim|Roboto" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet"> 
+  
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/lightbox.js"></script>
   <script src="/bundle.js" ></script>
+    
+
 </head>
 <body>
-  <div id="mount"></div>
+  <div id="app">
+  </div>
 </body>
 </html>
